# project-template

./: README.md  pyproject.toml
project/lib/: arithmetic.py
project/scripts/: example.ipynb
